--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,16 @@
 
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+
+ .user-info {
+   margin-top: 5px;
+   margin-bottom: 5px;
+   display: inline-block;
+ }
+
+ .nav {
+   margin-top: 5px;
+ }
+
+ 
