--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
         <li> <%= link_to "Topics", topics_path %> </li>
         <li> <%= link_to "About", about_path %> </li>
         <% if current_user %>
+
+          <div class="pull-right gravatar"> <%= image_tag avatar_url(current_user) %></div>
+
           <li class="pull-right"><%= link_to "#{current_user.name} -Sign Out", session_path(current_user), method: :delete %></li>
         <% else %>
           <li class="pull-right"><%= link_to "Sign In", new_session_path %></li>
