--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,8 +1,10 @@
 <h1><%= @topic.name %></h1>
 
-<% if user_is_authorized_for_topics? %>
-<%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
-<%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %>
+<% if user_is_authorized_to_edit_topics? %>
+  <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
+<% end %>
+<% if user_is_admin? %>
+  <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %>
 <% end %>
 
 <div class="row">
@@ -23,8 +25,8 @@
       <% end %>
   </div>
   <% if current_user %>
-  <div class="col-md-4">
-    <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
-  </div>
+    <div class="col-md-4">
+      <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
+    </div>
   <% end %>
 </div>
