completed assignment-bloccit-moderator

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,7 +13,7 @@
     <% if user_is_authorized_to_edit_post?(@post) %>
       <%= link_to "Edit", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
     <% end %>
-    <% user_is_authorized_to_delete_post?(@post) %>
+    <% if user_is_authorized_to_delete_post?(@post) %>
       <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } %>
     <% end %>
   </div>
