--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -3,8 +3,8 @@
 <div class="row">
   <div class="col-md-8">
     <% @topics.each do |topic| %>
-      <% render partial: 'topic', locals: { topic: topic } %>
-    <% end %> 
+      <%= render partial: 'topic', locals: { topic: topic } %>
+    <% end %>
   </div>
   <% if user_is_authorized_for_topics? %>
     <div class="col-md-4">
