--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,7 +8,7 @@
    </h1>
  </div>
 <div>
-  <%= render partial: 'votes/voting', locals: (post: @post } %>
+  <%= render partial: 'votes/voting', locals: { post: @post } %>
 </div>
 <div class="row">
   <div class="col-md-8">
