added current posts / comments to user SHOW

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,8 +19,20 @@
   </div>
 </div>
 
-<h2>Posts</h2>
-<%= render @user.posts %>
+<small>
+  <% if current_user_has_posts?(@user) %>
+    <h2>Posts</h2>
+      <%= render @user.posts %>
+    <% else %>
+      <%= "#{@user.name} has not submitted any posts yet." %>
+  <% end %>
 
-<h2>Comments</h2>
-<%= render @user.comments %>
+  <hr />
+
+  <% if current_user_has_comments?(@user) %>
+    <h2>Comments</h2>
+      <%= render @user.comments %>
+    <% else %>
+      <%= "#{@user.name} has not submitted any comments yet." %>
+  <% end %>
+</small>
