--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,12 +2,11 @@
   <div class="col-md-8">
     <div class="media">
       <br />
-      <% avatar_url = @user.avatar_url(128) %>
-      <% if avatar_url %>
+
         <div class="media-left">
-          <%= image_tag avatar_url, class: 'media-object' %>
+          <%= image_tag @user.avatar_url(128), class: 'media-object' %>
         </div>
-      <% end %>
+      
       <div class="media-body">
         <h2 class="media-heading"><%= @user.name %></h2>
         <small>
@@ -42,12 +41,9 @@
       <div class="col-md-8">
         <div class="media">
           <br />
-          <% avatar_url = @user.avatar_url(64) %>
-          <% if avatar_url %>
             <div class="media-left">
-              <%= image_tag avatar_url, class: 'media-object' %>
+              <%= image_tag @user.avatar_url(64), class: 'media-object' %>
             </div>
-          <% end %>
           <div class="media-body">
             <%= render partial: 'posts/post', locals: { post: fav.post } %>
           </div>
